[AD/LDAP] FEATBL-2152 Fix: sanitize LDAP/AD data used in requests